--- a/exer_02.html
+++ b/exer_02.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <title>Events 2</title>
     <link rel="stylesheet" href="css/estil2.css" />
-
   </head>
   <body>
     <h1>Events</h1>
     <h2 id="test">Pràctica 2</h2>
     <section>
     <div id="drag" class='draggable' draggable="true"><p>soy arrastrable</p></p></div>
-    <div id="drop" ><p>soy el destino</p></div>
+    <div id="drop"class="dropable" ><p>soy el destino</p></div>
   </section>
   <script type="text/javascript" src="js/02ex.js"></script>
 
